--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,100 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #e2dbde;
+  font-size:22px;
+  color:rgb(31, 20, 20);
+}
+.add, .remove, .clear{
+    float:inline-start;
+    background: snow;
+    color: crimson;
+    display: inline-table;
+    margin: auto;
+    width: 10.5rem;
+    font-size: 2rem;
+    height: 3.5rem;
+    border-radius: 6.5rem;
+    border: unset;
+    transition:width 1s;
+    transition-timing-function: ease-in-out;
+    padding:3px;
+    margin:5px;
+    
+}
+.add:hover, .remove:hover, .clear:hover{
+background: maroon;
+    color: seashell;
+    /* width: 300px; */
+}
+.myInput{
+ display: block;
+        width: 50%;
+    border-radius: 1rem;
+    border: 1px solid gainsboro;
+    margin: 10px auto;
+  height:30px;
+  font-size:18px;
+  padding:2px 10px;
+  color:black;
+}
+
+.userinput {
+    margin: auto;
+    text-align: center;
+}
+.ListShow{
+  text-align: center;
+}
+.ListShow ul{
+display: flex;
+}
+.ListShow ul li{
+      list-style: none;
+    border: 1px sol;
+    /* margin: 10px auto; */
+    width: 50%;
+}
+span.expenses {
+    float: left;
+}
+/* span.price {
+  float: right;
+} */
+span.status {
+  float: right;
+}
+button.delete {
+    float: right;
+    border-radius: 1rem;
+    border: unset;
+    width: 1.5rem;
+}
+.total{
+  margin:auto;
+     text-align: right;
+  max-width:50%;
+  
+}
+@keyframes changeColor {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+}
+.expenseRow{
+  padding:20px;
+  border-radius: 2rem;
+  margin: 20px;
+}
+.expenseRow{
+  border-radius: 2rem;
+  border-color: brown;
+  margin: 20px;
 }
